implement permission checker
