# Backend/docs/swagger.json
@@ -1446,15 +1446,15 @@
                     "type": "string",
                     "example": "Admin"
                 },
-                "permissions": {
+                "permission_ids": {
                     "type": "array",
                     "items": {
-                        "type": "string"
+                        "type": "integer"
                     },
                     "example": [
-                        "['read'",
-                        " 'write'",
-                        " 'delete']"
+                        1,
+                        2,
+                        3
                     ]
                 }
             }
@@ -1573,6 +1573,35 @@
                 }
             }
         },
+        "handlers.PermissionResponse": {
+            "type": "object",
+            "properties": {
+                "created_at": {
+                    "type": "string"
+                },
+                "created_by": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "tenant_id": {
+                    "type": "integer"
+                },
+                "updated_at": {
+                    "type": "string"
+                },
+                "updated_by": {
+                    "type": "string"
+                }
+            }
+        },
         "handlers.RoleResponse": {
             "description": "Role response model",
             "type": "object",
@@ -1606,13 +1635,8 @@
                 "permissions": {
                     "type": "array",
                     "items": {
-                        "type": "string"
-                    },
-                    "example": [
-                        "['read'",
-                        " 'write'",
-                        " 'delete']"
-                    ]
+                        "$ref": "#/definitions/handlers.PermissionResponse"
+                    }
                 },
                 "tenant_id": {
                     "type": "integer",
@@ -1682,15 +1706,15 @@
                     "type": "string",
                     "example": "Admin"
                 },
-                "permissions": {
+                "permission_ids": {
                     "type": "array",
                     "items": {
-                        "type": "string"
+                        "type": "integer"
                     },
                     "example": [
-                        "['read'",
-                        " 'write'",
-                        " 'delete']"
+                        1,
+                        2,
+                        3
                     ]
                 }
             }
